fixed padding issue on mobile

--- a/css/content.scss
+++ b/css/content.scss
@@ -188,7 +188,7 @@ h4{
         margin-bottom:8px;
     }
 
-    .about-me, .social-media, .resume{
+    .about-me, .social-media, .resume, .projects{
         // Removing the border on mobile
         padding:20px;
         border-width:0px;
